dev/test_programs/INVALID/group5/scanner_literal_float_wrong_decimal.go
package scanner_literal_float_wrong_decimal

var f float64 = 4.2f
